--- a/index.html
+++ b/index.html
@@ -4,8 +4,48 @@
   <title>Aditya Pandey | Portfolio</title>
 </head>
 <body>
-  <h1>Hello 👋</h1>
-  <h2>I am Aditya Pandey</h2>
-  <p>This is my GitHub portfolio.</p>
+
+  <h1>Aditya Pandey</h1>
+  <p>BTech Student | DSA | SQL | Web Development</p>
+
+  <h2>About Me</h2>
+  <p>
+    I am a BTech student passionate about problem solving and software development.
+    I practice DSA on LeetCode and build projects using web technologies.
+  </p>
+
+  <h2>Skills</h2>
+  <ul>
+    <li>C / C++</li>
+    <li>Data Structures & Algorithms</li>
+    <li>SQL</li>
+    <li>HTML, CSS (Basics)</li>
+  </ul>
+
+  <h2>Projects</h2>
+  <ul>
+    <li>Portfolio Website (GitHub Pages)</li>
+    <li>DSA Practice on LeetCode</li>
+  </ul>
+
+  <h2>Profiles</h2>
+  <ul>
+    <li>
+      <a href="https://www.linkedin.com/in/aditya-pandey-a1a76231b" target="_blank">
+        LinkedIn
+      </a>
+    </li>
+    <li>
+      <a href="https://leetcode.com/CodeAditya99/" target="_blank">
+        LeetCode
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/Aditya736" target="_blank">
+        GitHub
+      </a>
+    </li>
+  </ul>
+
 </body>
 </html>
